--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <body style="text-align: center;">
     <h1 style="color: pink;">Bienvenido a la p&aacute;gina de Jocelyne y Lorena</h1>
     <p>Estamos usando Nginx</p>
-    <img src="imagen.jpeg" alt="Imagen de nosotras" style="width: 50%;">
+    <img src="https://raw.githubusercontent.com/JocelyneGonzalezHernandez/DockerNginx/main/imagen.jpeg" alt="Imagen de nosotras" style="width: 50%;">
   </body>
 </html>
